@@ -9,7 +9,7 @@
 # be added to ~/.rpmmacros.
 #
 #==============================================================================
-# Macro naming conventions (preliminary):
+# Macro naming conventions:
 #
 #	Macros that begin with an underscore are "local" in the sense that
 #	they (if used) will not be exported in rpm headers. Some macros
@@ -17,6 +17,7 @@
 #	are compatible with macros generated by rpm-2.5.x and will be made
 #	more consistent in a future release.
 #
+%_rpmversion		@VERSION@
 
 #==============================================================================
 # ---- A macro that expands to nothing.
@@ -31,6 +32,8 @@
 %_var			@varprefix@
 %_usrlibrpm		@USRLIBRPM@
 %_etcrpm		@SYSCONFIGDIR@
+
+%_rpmhome		%{_usrlibrpm}/%{_rpmversion}
 
 #==============================================================================
 # ---- Generally useful path macros.
@@ -181,7 +184,7 @@
 #	Path to script that creates debug symbols in a /usr/lib/debug
 #	shadow tree.
 %__debug_install_post   \
-   %{_usrlibrpm}/find-debuginfo.sh %{_builddir}/%{?buildsubdir}\
+   %{_rpmhome}/find-debuginfo.sh %{_builddir}/%{?buildsubdir}\
 %{nil}
 
 #	Template for debug information sub-package.
@@ -384,7 +387,7 @@ package or when debugging this package.\
 # Returns list of unpackaged files, i.e. files in $RPM_BUILD_ROOT not packaged.
 #
 # Note: Disable (by commenting out) for legacy compatibility.
-%__check_files         %{_usrlibrpm}/check-files %{buildroot}
+%__check_files         %{_rpmhome}/check-files %{buildroot}
 
 #
 # Should unpackaged files in a build root terminate a build?
@@ -447,10 +450,10 @@ print (t)\
 # Path to scripts to autogenerate package dependencies,
 #
 # Note: Used iff _use_internal_dependency_generator is zero.
-#%__find_provides	%{_usrlibrpm}/rpmdeps --provides
-#%__find_requires	%{_usrlibrpm}/rpmdeps --requires
-%__find_provides	%{_usrlibrpm}/find-provides
-%__find_requires	%{_usrlibrpm}/find-requires
+#%__find_provides	%{_rpmhome}/rpmdeps --provides
+#%__find_requires	%{_rpmhome}/rpmdeps --requires
+%__find_provides	%{_rpmhome}/find-provides
+%__find_requires	%{_rpmhome}/find-requires
 #%__find_conflicts	???
 #%__find_obsoletes	???
 
@@ -906,7 +909,7 @@ print (t)\
 %_rpmds_getconf_path	/
 
 #
-%_rpmds_perldeps_cmd	%{__find} %{_libdir}/perl5 | %{_usrlibrpm}/perl.prov
+%_rpmds_perldeps_cmd	%{__find} %{_libdir}/perl5 | %{_rpmhome}/perl.prov
 
 #
 %_varrun		/var/run
@@ -1305,7 +1308,7 @@ done \
 # ...
 # %files -f %{name}.lang
 #
-%find_lang	%{_usrlibrpm}/find-lang.sh %{buildroot}
+%find_lang	%{_rpmhome}/find-lang.sh %{buildroot}
 
 #------------------------------------------------------------------------
 # lua macros
@@ -1325,11 +1328,11 @@ end\
 # Path to scripts to autogenerate perl package dependencies,
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
-# helpers are also used by %{_usrlibrpm}/rpmdeps {--provides|--requires}.
-#%__perl_provides	%{_usrlibrpm}/perldeps.pl --provides
-#%__perl_requires	%{_usrlibrpm}/perldeps.pl --requires
-%__perl_provides	%{_usrlibrpm}/perl.prov
-%__perl_requires	%{_usrlibrpm}/perl.req
+# helpers are also used by %{_rpmhome}/rpmdeps {--provides|--requires}.
+#%__perl_provides	%{_rpmhome}/perldeps.pl --provides
+#%__perl_requires	%{_rpmhome}/perldeps.pl --requires
+%__perl_provides	%{_rpmhome}/perl.prov
+%__perl_requires	%{_rpmhome}/perl.req
 
 # Useful macros for building *.rpm perl packages.
 #	(from Artur Frysiak <wiget@t17.ds.pwr.wroc.pl>)
@@ -1370,9 +1373,9 @@ end\
 # Path to scripts to autogenerate python package dependencies,
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
-# helpers are also used by %{_usrlibrpm}/rpmdeps {--provides|--requires}.
-%__python_provides	%{_usrlibrpm}/pythondeps.sh --provides
-%__python_requires	%{_usrlibrpm}/pythondeps.sh --requires
+# helpers are also used by %{_rpmhome}/rpmdeps {--provides|--requires}.
+%__python_provides	%{_rpmhome}/pythondeps.sh --provides
+%__python_requires	%{_rpmhome}/pythondeps.sh --requires
 
 # Useful macros for building *.rpm python packages (for python > 1.6).
 #
@@ -1395,11 +1398,11 @@ PreReq: python >= %{python_version}, python < %{maxver}
 # Path to scripts to autogenerate php package dependencies,
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
-# helpers are also used by %{_usrlibrpm}/rpmdeps {--provides|--requires}.
-#%__php_provides	%{_usrlibrpm}/phpdeps.sh --provides
-#%__php_requires	%{_usrlibrpm}/phpdeps.sh --requires
-#%__php_provides		%{_usrlibrpm}/php.prov
-#%__php_requires		%{_usrlibrpm}/php.req
+# helpers are also used by %{_rpmhome}/rpmdeps {--provides|--requires}.
+#%__php_provides	%{_rpmhome}/phpdeps.sh --provides
+#%__php_requires	%{_rpmhome}/phpdeps.sh --requires
+#%__php_provides		%{_rpmhome}/php.prov
+#%__php_requires		%{_rpmhome}/php.req
 
 #------------------------------------------------------------------------
 # java(...) configuration.
@@ -1407,9 +1410,9 @@ PreReq: python >= %{python_version}, python < %{maxver}
 # Path to scripts to autogenerate java package dependencies,
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
-# helpers are also used by %{_usrlibrpm}/rpmdeps {--provides|--requires}.
-%__java_provides	%{_usrlibrpm}/javadeps.sh --provides
-%__java_requires	%{_usrlibrpm}/javadeps.sh --requires
+# helpers are also used by %{_rpmhome}/rpmdeps {--provides|--requires}.
+%__java_provides	%{_rpmhome}/javadeps.sh --provides
+%__java_requires	%{_rpmhome}/javadeps.sh --requires
 
 #------------------------------------------------------------------------
 # libtool(...) configuration.
@@ -1417,9 +1420,9 @@ PreReq: python >= %{python_version}, python < %{maxver}
 # Path to scripts to autogenerate libtool package dependencies,
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
-# helpers are also used by %{_usrlibrpm}/rpmdeps {--provides|--requires}.
-%__libtool_provides	%{_usrlibrpm}/libtooldeps.sh --provides %{buildroot} %{name}
-%__libtool_requires	%{_usrlibrpm}/libtooldeps.sh --requires %{buildroot} %{name}
+# helpers are also used by %{_rpmhome}/rpmdeps {--provides|--requires}.
+%__libtool_provides	%{_rpmhome}/libtooldeps.sh --provides %{buildroot} %{name}
+%__libtool_requires	%{_rpmhome}/libtooldeps.sh --requires %{buildroot} %{name}
 
 #------------------------------------------------------------------------
 # pkgconfig(...) configuration.
@@ -1427,9 +1430,9 @@ PreReq: python >= %{python_version}, python < %{maxver}
 # Path to scripts to autogenerate pkgconfig package dependencies,
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
-# helpers are also used by %{_usrlibrpm}/rpmdeps {--provides|--requires}.
-%__pkgconfig_provides	%{_usrlibrpm}/pkgconfigdeps.sh --provides
-%__pkgconfig_requires	%{_usrlibrpm}/pkgconfigdeps.sh --requires
+# helpers are also used by %{_rpmhome}/rpmdeps {--provides|--requires}.
+%__pkgconfig_provides	%{_rpmhome}/pkgconfigdeps.sh --provides
+%__pkgconfig_requires	%{_rpmhome}/pkgconfigdeps.sh --requires
 
 #------------------------------------------------------------------------
 # executable(...) configuration.
@@ -1437,9 +1440,9 @@ PreReq: python >= %{python_version}, python < %{maxver}
 # Path to scripts to autogenerate executable(foo) script dependencies,
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
-# helpers are also used by %{_usrlibrpm}/rpmdeps {--provides|--requires}.
-#%__executable_provides	%{_usrlibrpm}/executabledeps.sh --provides
-#%__executable_requires	%{_usrlibrpm}/executabledeps.sh --requires
+# helpers are also used by %{_rpmhome}/rpmdeps {--provides|--requires}.
+#%__executable_provides	%{_rpmhome}/executabledeps.sh --provides
+#%__executable_requires	%{_rpmhome}/executabledeps.sh --requires
 %__scriptlet_requires	/bin/bash --rpm-requires
 
 # \endverbatim
