@@ -1,4 +1,7 @@
 4.4.9 -> 4.5:
+    - jbj: add _rpmhome macro, revector helper paths through _rpmhome.
+    - jbj: hack a version into magic install path. better needs to be done.
+    - jbj: start consistent versionlibdir usage in all Makefile.am files.
     - jbj: populate /usr/lib/rpm/@VERSION@/ instead of foo-@VERSION@ files.
     - jbj: move gendiff into the scripts directory.
     - jbj: don't include perl/CVS with "make dist".
